(executable
 (name main)
 (modules main))

(library
 (name reducingBySteps)
 (modules reducingBySteps)
 ; (inline_tests)
 (preprocess (pps ppx_inline_test)))

(library
 (name compress)
 (modules compress)
 ; (inline_tests)
 (preprocess (pps ppx_inline_test)))

(library
 (name playingWithPassphrases)
 (modules playingWithPassphrases)
 ; (inline_tests)
 (preprocess (pps ppx_inline_test)))

(library
 (name kthElement)
 (modules kthElement)
 (inline_tests)
 (preprocess (pps ppx_inline_test)))

(install
 (section bin)
 (files
  (main.exe as main)))
