(executable
 (name main)
 (modules main))

(library
 (name reducingBySteps)
 (modules reducingBySteps)
 ; (inline_tests)
 (preprocess (pps ppx_inline_test)))

(library
 (name compress)
 (modules compress)
 ; (inline_tests)
 (preprocess (pps ppx_inline_test)))

(library
 (name playingWithPassphrases)
 (modules playingWithPassphrases)
 ; (inline_tests)
 (preprocess (pps ppx_inline_test)))

(library
 (name kthElement)
 (modules kthElement)
 ; (inline_tests)
 (preprocess (pps ppx_inline_test)))

(library
 (name helpYourGranny)
 (modules helpYourGranny)
 ; (inline_tests)
 (preprocess (pps ppx_inline_test)))

(library
 (name caesarCipher2nd)
 (modules caesarCipher2nd)
 ; (inline_tests)
 (preprocess (pps ppx_inline_test)))

(library
 (name tankTruck)
 (modules tankTruck)
 ; (inline_tests)
 (preprocess (pps ppx_inline_test)))

(library
 (name theWalker)
 (modules theWalker)
 ; (inline_tests)
 (preprocess (pps ppx_inline_test)))

(library
 (name longestConsecutiveString)
 (modules longestConsecutiveString)
 ; (inline_tests)
 (preprocess (pps ppx_inline_test)))

(library
 (name listSquared)
 (modules listSquared)
 ; (inline_tests)
 (preprocess (pps ppx_inline_test)))

(library
 (name perimeters)
 (modules perimeters)
 ; (inline_tests)
 (preprocess (pps ppx_inline_test)))

(library
 (name bestTravel)
 (modules bestTravel)
 ; (inline_tests)
 (preprocess (pps ppx_inline_test)))

(library
 (name lcs)
 (modules lcs)
 ; (inline_tests)
 (preprocess (pps ppx_inline_test)))

(library
 (name fiboAkin)
 (modules fiboAkin)
 ; (inline_tests)
 ; (libraries extlib)
 (preprocess (pps ppx_inline_test)))

(library
 (name sumFactors)
 (modules sumFactors)
 (inline_tests)
 (preprocess (pps ppx_inline_test)))

(install
 (section bin)
 (files
  (main.exe as main)))
